--- a/myStyle.css
+++ b/myStyle.css
@@ -113,8 +113,21 @@ img#olafimage {
     display:none;
 }
 img#remy {
-    width: 5%;
+    width:5%;
 }
+div#largeview {
+    position: fixed;
+    top: 10%;
+    right: 0%;
+  }
+
+div#largeview.dontshow {
+    display: none;
+  }
+
+div#largeview img {
+    height: 300px;
+  }
 @media (max-width: 815px) {
     body {
         margin-left: 5%;
